v2.6.0-preview2 Added a few more view modes to the custom floor editor, hotkeys A/S for changing between Select and Apply modes,           support for turning random spawns on and off, and changed color scheme. Some behind the scenes fixes and improvements.

--- a/customFloor/index.css
+++ b/customFloor/index.css
@@ -7,6 +7,7 @@ html, body {
     padding-left: 1em;
     /* padding-top: 0.5em; */
     height: 100%;
+    background-color: lightslategray;
 }
 
 #version {
@@ -45,7 +46,6 @@ html, body {
   padding: 3em 1em;
   /* align-content: flex-end; */
   width: 30%;
-  color: blue;
 }
 
 .edit-mode {
